[package]
name = "ldconvert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
image = "0.25.2"
palette = { version = "0.7.6", features = ["serializing"] }
rand = "0.8.5"
ron = "0.8.1"
savefile = "0.17.7"
savefile-derive = "0.17.7"
serde = { version = "1.0.205", features = ["derive"] }
